completed issue 1 - stretch feature: item rarity, text scroll tbd

--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,13 @@ img {
   width: 100%;
 }
 
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 2000px;
@@ -42,16 +49,13 @@ img {
   img {
     width: 100%;
   }
-}
 
-ul {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-}
-
-.background {
-  background: rgba(85, 84, 84, 0.582);
+  ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+  }
 }
 
 li {
